--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>THE RUE DIARIES</title>
+    <title>RUE DIARIES</title>
     <link href='./style.css' 
     rel='stylesheet'>
 </head>
